--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -15,13 +15,13 @@
                         <tr>
                             <th scope="row"><%= portfolio.id %></th>
                             <td><img src="" class="rounded-circle player-img" alt=""></td>
-                            <td><%= player.title %></td>
-                            <td><%= player.description %></td>
-                            <td><%= player.link %></td>
+                            <td><%= portfolio.title %></td>
+                            <td><%= portfolio.description %></td>
+                            <td><%= portfolio.link %></td>
                             
                             <td>
-                                <a href="/edit/<%= player.id %>" target="_blank" rel="noopener" class="btn btn-sm btn-success">Edit</a>
-                                <a href="/delete/<%= player.id %>" class="btn btn-sm btn-danger">Delete</a>
+                                <a href="/edit/<%= portfolio.id %>" target="_blank" rel="noopener" class="btn btn-sm btn-success">Edit</a>
+                                <a href="/delete/<%= portfolio.id %>" class="btn btn-sm btn-danger">Delete</a>
                             </td>
                         </tr>
                     <% }) %>
