--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include ('partials/header.ejs'); -%>
     <div class="table-wrapper">
-        <% if (portfolio.length > 0) {%>
+        <% if (portfolios.length > 0) {%>
             <table class="table table-hovered">
                 <thead class="thead-dark">
                     <tr>
@@ -12,7 +12,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <% portfolio.forEach((portfolio, index) => { %>
+                    <% portfolios.forEach((portfolio, index) => { %>
                         <tr>
                             <th scope="row"><%= portfolio.id %></th>
                             <td><img src="/assets/img/<%= portfolio.image %>" class="rounded-circle player-img" alt=""></td>
