--- a/views/add-portfolio.ejs
+++ b/views/add-portfolio.ejs
@@ -1,31 +1,37 @@
-<%- include ('partials/header.ejs'); -%>
-    <div class="container">
-        <% if (message != '') { %>
-            <p class="text-center text-danger"><%= message %></p>
-        <% } %>
-        <form class="add-player-form" action="" method="post" enctype="multipart/form-data">
-            <div class="form-row">
-                <div class="form-group col-md-4">
-                    <input type="text" class="form-control" name="name" id="name" placeholder="First Name" required>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>Add Book</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+</head>
+<body class="container" style="margin-top: 50px;">
+
+	<% if (messages.error) { %>
+	<div class="alert alert-danger" role="alert"><%- messages.error %></div>
+	<% } %>
+
+    <div class="card">
+    	<div class="card-header">
+			Add Book
+		</div>
+        <div class="card-body">
+            <form action="/books/add" method="post">
+                <div class="form-group">
+                    <label>Name:</label>
+                    <input type="text" class="form-control" name="name" value="<%= name %>" autocomplete="off">
                 </div>
-                <div class="form-group col-md-4">
-                    <input type="text" class="form-control" name="description" id="description" placeholder="description" required>
+                <div class="form-group">
+                    <label>Author:</label>
+                    <input type="text" class="form-control" name="author" value="<%= author %>" autocomplete="off">
                 </div>
-                <div class="form-group col-md-4">
-                    <input type="text" class="form-control" name="link" id="link" placeholder="github link" required>
+                <div class="form-group">
+                    <input type="submit" class="btn btn-info" value="Add"/>
                 </div>
-            </div>
-            <div class="form-row">
-                
-                
-                <div class="col-md-12">
-                    <label for="player-img"><b>Player Image</b></label><br>
-                    <input type="file" name="image" id="player-img" class="" required>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary float-right">Add Player</button>
-        </form>
+            </form>
+        </div>
     </div>
-</div>
+
 </body>
 </html>
