--- a/views/portfolios/edit.ejs
+++ b/views/portfolios/edit.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Edit Book</title>
+	<title>Edit Portfolio </title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body class="container" style="margin-top: 50px;">
@@ -14,7 +14,7 @@
 
     <div class="card"> 
     	<div class="card-header">
-			Edit Book
+			Edit Portoflio
 		</div>
         <div class="card-body">
             <form action="/portfolios/update/<%= id %>" method="post">
