--- a/views/portfolios/index.ejs
+++ b/views/portfolios/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Books</title>
+    <title>Portfolio List</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body class="container" style="margin-top: 50px;">
@@ -20,10 +20,10 @@
         <div class="card-header">
             <ul class="nav nav-pills w-100">
                 <li class="nav-pill active">
-                    <a class="nav-link">Books</a>
+                    <a class="nav-link">Portfolio</a>
                 </li>
                 <li class="nav-pill ml-auto">
-                    <a class="nav-link active" href="/portfolios/add">Add Book</a>
+                    <a class="nav-link active" href="/portfolios/add">Add Portolio Item</a>
                 </li>
             </ul>
         </div>
@@ -35,7 +35,7 @@
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Name</th>
-                    <th scope="col">Author</th>
+                    <th scope="col">Description</th>
                     <th width="200px">Action</th>
                 </tr>
             </thead>
@@ -57,7 +57,7 @@
         
         <!-- if result is empty -->
         <% if(!data.length) { %>
-            <p class="text-center">No book found!</p>
+            <p class="text-center">No Portfolio found!</p>
         <% } %>
 
         </div>
