working on making it prety now

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Welcome</h1>
-    <p>Welcome to <%= title %><br><br><a href="/portfolios">Portfolio Panel</a><br><br>Resume Panel <a href="https://www.mynotepaper.com">mynotepaper.com</a></p>
+    <p>Welcome to <%= title %><br><br><a href="/portfolios">Portfolio Panel</a><br> <a href="/resume">Resume Panel </a></p>
   </body>
 </html>
