--- a/views/contactlisting/index.ejs
+++ b/views/contactlisting/index.ejs
@@ -12,11 +12,9 @@
         <div class="card-header">
             <ul class="nav nav-pills w-100">
                 <li class="nav-pill active">
-                    <a class="nav-link">Portfolio</a>
+                    <a class="nav-link">Contact Listing</a>
                 </li>
-                <li class="nav-pill ml-auto">
-                    <a class="nav-link active" href="/portfolios/add">Add Portolio Item</a>
-                </li>
+                
             </ul>
         </div>
     <div class="card-body">
