--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,25 +3,30 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   </head>
   <body>
     
-      <h1>Login form</h1>
-      <form name="form1" method="POST" action="/student/add">
-      <table>
-          <tr>
-          <td>First name</td>
-          <td><input type="text" name="fname" ></td>
-          </tr>
-          <tr>
-          <td>last name</td>
-          <td><input type="text" name="lname" ></td>
-          </tr>
-          <tr>
-          <td colspan="2"><input type="submit" value="Save" ></td>
-          </tr>
-      </table>
-      </form>   
-      
-  
+    <div class="card"> 
+    	<div class="card-header">
+			Login
+		</div>
+        <div class="card-body">
+            <form action="/dashboard" method="get">
+                <div class="form-group">
+                    <label>Username:</label>
+                    <input type="text" class="form-control" name="name" value="" autocomplete="off">
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="text" class="form-control" name="description" value="" autocomplete="off">
+                </div>
+                
+                <div class="form-group">
+                    <input type="submit" class="btn btn-info" value="Login"/>
+                </div>
+            </form>
+        </div>
+    </div>
+  </body>
 </html>
