--- a/views/portfolios/index.ejs
+++ b/views/portfolios/index.ejs
@@ -6,6 +6,23 @@
     <title>Portfolio List</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
+<ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link " href="/dashboard">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="/portfolios">Portfolio</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/resume">Resume</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link " href="/contactlisting">Contact Listing</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link " href="/">Log Out</a>
+      </li>
+  </ul>
 <body class="container" style="margin-top: 50px;">
 
     <% if (messages.success) { %>
