--- a/views/contactlisting/index.ejs
+++ b/views/contactlisting/index.ejs
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,6 +7,23 @@
     <title>Contact Listing</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
+<ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link " href="/dashboard">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/portfolios">Portfolio</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/resume">Resume</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="#">Contact Listing</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/">Log Out</a>
+      </li>
+  </ul>
 <body class="container" style="margin-top: 50px;">
 
     <div class="card"> 
