--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -1,10 +1,19 @@
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Admin Dashboard</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   </head>
   <body>
+    <div class="jumbotron">
+      <h1 class="display-4">The Admin Panel</h1>
+      <p class="lead">Hello Admin! You are signed in. Please click on the links below to get started.</p>
+      <hr class="my-4">
+      <p><a href="/portfolios">Portfolio Panel</a></p>
+      <p><a href="/resume">Resume Panel</a></p>
+      <p><a href="/contactlisting">Contact Listing</a></p>
+      <p><a href="/">Log Out</a></p>
+    </div>
   <div class="card-body"></div>
 
   </body>
