--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,9 @@
                 </div>
                 
                 <div class="form-group">
-                    <input type="submit" class="btn btn-info" value="Login"/>
+                  <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="/dashboard" role="button">Login</a>
+                  </p>
                 </div>
             </form>
         </div>
